Feat/spring content encryption (#1136)
* Allow provided fragments to be overwritten

* Fragments can now implement a setStoreInterface to be store interface aware

- also refactor store interface type extraction into helper

* Content property now supports custom attributes

* Add spring-content-encryption module that provides an EncryptingContentStore fragment that content store can optionally implement

* Refactor getStoreTypes to make it backward compatible

* Add new overloaded getResource to AssociativeStore to allow range to be passed to Store

- enables Store to make a range request when possible
- allows encrypting store to decrypt just the range requested

* Code cleanup

* Ensure AWS_REGION env var is set

* fix: dependencies

* Add ssh to investigate failure

* Try renaming the S3Client bean

* move spring-content-encryption for earlier feedback

* Try encryption integration tests in two different packages

- to avoid possible interference with autoconfiguration

* Try disabling autoconfiguration

* test: cleanup

* Rollback configuration

* re-instate AWS_REGION env var

* test: more test cleanup

* docs: spring-content-encryption initial draft